# webrtc

./: BUILD.gn  README.md  epic.diff  generateUnityPlugin.sh  pullWebRtcUnityPlugin.sh
Ue4/: Eagle3DPixelStreaming.md  buildPatch.diff  srtppatch.diff  third_partyPatch.diff
api/: peer_connection_interface.h
api/audio/: channel_layout.cc
api/video/: video_frame_buffer.h
audio/: audio_send_stream.cc  audio_send_stream.h  channel_send.cc  channel_send.h  mock_voe_channel_proxy.h
call/: audio_send_stream.h
call/test/: mock_audio_send_stream.h
examples/: BUILD.gn
examples/unityplugin/: augVcmCapturer.cc  augVcmCapturer.h  h264CodecFactory.h  simple_peer_connection.cc  simple_peer_connection.h  unity_plugin_apis.cc  unity_plugin_apis.h  video_observer.cc  video_observer.h
examples/unityplugin/java/src/org/webrtc/: UnityUtility.java
media/: BUILD.gn
media/engine/: fake_webrtc_call.cc  fake_webrtc_call.h  multiplex_augment_only_codec_factory.cc  multiplex_augment_only_codec_factory.h  webrtc_voice_engine.cc
modules/video_coding/: BUILD.gn
modules/video_coding/codecs/multiplex/: augmented_video_frame_buffer.cc  multiplex_augment_only_decoder_adapter.cc  multiplex_augment_only_encoder_adapter.cc
modules/video_coding/codecs/multiplex/include/: multiplex_augment_only_decoder_adapter.h  multiplex_augment_only_encoder_adapter.h
modules/video_coding/codecs/vp8/: libvpx_vp8_encoder.h
p2p/: BUILD.gn
p2p/base/: proxy_packet_socket_factory.cc  proxy_packet_socket_factory.h
pc/: local_audio_source.cc  local_audio_source.h  local_audio_source_unittest.cc  peer_connection.cc  peer_connection_factory.cc  peer_connection_factory.h  rtp_sender.cc  rtp_sender_receiver_unittest.cc
rtc_base/: crypt_string.h
sdk/: BUILD.gn
sdk/android/: BUILD.gn
sdk/android/api/org/webrtc/: AudioSink.java  AudioTrack.java  MultiplexVideoDecoderFactory.java  MultiplexVideoEncoderFactory.java  PeerConnection.java
sdk/android/src/jni/: audio_sink.cc  audio_sink.h
sdk/android/src/jni/pc/: audio_track.cc  peer_connection.cc
sdk/objc/Framework/Headers/WebRTC/: RTCAudioSink.h  RTCAugmentedVideoBuffer.h
sdk/objc/api/peerconnection/: RTCAudioSink.h  RTCAudioTrack.h  RTCAudioTrack.mm  RTCConfiguration+Private.h  RTCConfiguration.h  RTCConfiguration.mm  RTCPeerConnectionFactory.h  RTCPeerConnectionFactory.mm
sdk/objc/components/video_codec/: nalu_rewriter.cc  nalu_rewriter.h
sdk/objc/components/video_frame_buffer/: RTCAugmentedVideoBuffer.h  RTCAugmentedVideoBuffer.mm
sdk/objc/native/src/: objc_frame_buffer.mm  objc_video_track_source.mm
socketio/: BUILD.gn  BUILD.gn_withffmpg  CMakeLists.txt  README.md  Signaler.cpp  Signaler.h  SignalerAPI.cpp  SignalerAPI.h  SocketIO.cpp  SocketIO.h  main.cpp  mainhttp.cpp
socketio/client/src/base/include/base/: base64.h  define.h  platform.h  queue.h  random.h  util.h
socketio/client/src/base/src/: logger.cpp  platform.cpp
socketio/client/src/broadcast/include/webrtc/: audiopacketmodule.h
socketio/client/src/broadcast/main/: Makefile  Streamer.cpp
socketio/client/src/broadcast/main/key/: cert.pem  key.pem
socketio/client/src/broadcast/signalserver/codelab/: config.js  package-lock.json
socketio/client/src/broadcast/src/: audiopacketmodule.cpp
socketio/client/src/ffmpeg/: README.md
socketio/client/src/ffmpeg/ffmpeg_cpp/: ac3tab.h  avstring.cpp  config.h  mux.cpp
socketio/client/src/ffmpeg/ffmpeg_cpp/audio/: audio_mix.h
socketio/client/src/ffmpeg/ffmpeg_cpp/mp4Probe/: mov.cpp
socketio/client/src/ffmpeg/h24Decoder/: H264_Decoder.cpp  H264_Decoder.h  Makefile  main.cpp
socketio/client/src/ffmpeg/h264Encoder/: H264_Encoder.cpp  H264_Encoder.h  fftests.cpp
socketio/client/src/ffmpeg/include/ff/: audiobuffer.h  audiocontext.h  audioresampler.h  devicemanager.h  ffmpeg.h  videocontext.h  videoconverter.h
socketio/client/src/ffmpeg/src/: audiodecoder.cpp  audioresampler.cpp  ffmpeg.cpp  mediacapture.cpp  packet.cpp  videodecoder.cpp
socketio/client/src/http/include/http/: HTTPResponder.h
socketio/client/src/http/src/: HTTPResponder.cpp  HttpsClient.cpp  HttpsConn.cpp  websocket.cpp
socketio/client/src/net/src/: TcpConnection.cpp  TcpServer.cpp  UdpSocket.cpp  ssladapter.cpp
video/: video_stream_encoder.cc
win_h264_accel/: BUILD.gn  native_handle_buffer.h  win_h264_factory.cc  win_h264_factory.h
win_h264_accel/H264Decoder/: H264Decoder.cc  H264Decoder.h
win_h264_accel/H264Encoder/: H264Encoder.cc  H264Encoder.h  H264MediaSink.cc  H264MediaSink.h  H264StreamSink.cc  H264StreamSink.h  IH264EncodingCallback.h
win_h264_accel/Utils/: Async.h  CritSec.h  OpQueue.h  SampleAttributeQueue.h  Utils.h
